--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-screens": "~3.18.0",
     "react-redux": "^8.0.5",
     "uuid": "^9.0.0",
-    "expo-updates": "~0.15.6"
+    "expo-updates": "~0.15.6",
+    "expo-dev-client": "~2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
